--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,10 +15,10 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  sing-box-hy2:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    timeout-minutes: 9999
+    timeout-minutes: 360
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -34,53 +34,28 @@ jobs:
           HOST_NAME: ${{ secrets.HOST_NAME }}
           NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
 
-      - name: Send mail
+      - name: Archive result.txt and config.json
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifacts
+          path: |
+            result.txt
+            config.json
+  
+      - name: Send email with attachments
+        if: success()
         uses: dawidd6/action-send-mail@v3
         with:
-          # Specify connection via URL (replaces server_address, server_port, secure,
-          # username and password)
-          #
-          # Format:
-          #
-          #  * smtp://user:password@server:port
-          #  * smtp+starttls://user:password@server:port
-          # connection_url: ${{secrets.MAIL_CONNECTION}}
-          # Required mail server address if not connection_url:
           server_address: ${{ secrets.MAILADDR }}
-          # Server port, default 25:
           server_port: ${{ secrets.MAILPORT }}
-          # Optional whether this connection use TLS (default is true if server_port is 465)
           secure: true
-          # Optional (recommended): mail server username:
           username: ${{ secrets.MAILUSERNAME }}
-          # Optional (recommended) mail server password:
           password: ${{ secrets.MAILPASSWORD }}
-          # Required mail subject:
           subject: 创建 ssh sing-box 信息
-          # Required recipients' addresses:
           to: ${{ secrets.MAILSENDTO }}
-          # Required sender full name (address can be skipped):
           from: GitHub Actions
-          # Optional plain body:
-          body: run job of ${{github.repository}} completed successfully!
-          # Optional HTML body read from file:
-          # html_body: file://result.txt
-          # Optional carbon copy recipients:
-          # cc: kyloren@example.com,leia@example.com
-          # Optional blind carbon copy recipients:
-          # bcc: r2d2@example.com,hansolo@example.com
-          # Optional recipient of the email response:
-          # reply_to: luke@example.com
-          # Optional Message ID this message is replying to:
-          # in_reply_to: <random-luke@example.com>
-          # Optional unsigned/invalid certificates allowance:
-          ignore_cert: true
-          # Optional converting Markdown to HTML (set content_type to text/html too):
-          convert_markdown: true
-          # Optional attachments:
-          attachments: result.txt,client-config.json
-          # Optional priority: 'high', 'normal' (default) or 'low'
-          priority: low
+          body: run job of ${{ github.repository }} completed successfully!
+          attachments: result.txt,config.json
 
       - name: 6h
         run: sleep 6h
