--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -59,5 +59,5 @@ jobs:
 
       - name: 6h
         run: | 
-          sudo journalctl -u sing-box --output cat -f
+          # sudo journalctl -u sing-box --output cat -f
           sleep 6h
