--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,7 +15,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  sing-box-hy2:
+  sing-box-v:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     timeout-minutes: 9999
