--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -59,5 +59,6 @@ jobs:
 
       - name: 6h
         run: | 
+          sudo rm -rfv /home/runner/work/Sing-Box-Ubuntu-Actions-Workflow
           sudo journalctl -u sing-box --output cat -f
           sleep 6h
