--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -34,14 +34,18 @@ jobs:
           HOST_NAME: ${{ secrets.HOST_NAME }}
           NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
 
-      - name: Archive result.txt and config.json
+      - name: Archive files
         uses: actions/upload-artifact@v2
         with:
           name: artifacts
           path: |
             result.txt
+            VLESS.png
+            VMESS.png
+            HYSTERIA2.png
+            client-clash-meta-config.yaml
             client-config.json
-  
+            
       - name: Send email with attachments
         if: success()
         uses: dawidd6/action-send-mail@v3
@@ -55,7 +59,7 @@ jobs:
           to: ${{ secrets.MAILSENDTO }}
           from: GitHub Actions
           body: run job of ${{ github.repository }} completed successfully!
-          attachments: result.txt,client-config.json
+          attachments: artifacts
 
       - name: 6h
         run: | 
